--- a/index.html
+++ b/index.html
@@ -1,47 +1,79 @@
 <!DOCTYPE html>
 <html lang="ru" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Лучшие товары - Prime</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.less">
-  </head>
-  <body>
-    <header>
-      <h1>Лучшие товары</h1>
-      <span>Все товары</span>
-      <p>Идейные соображения высшего порядка, а также сложившаяся структура организации представляет собой
-        интересный эксперимент проверки направлений прогрессивного развития.</p>
-    </header>
-    <main>
-      <a href="#">
-       <div class="left-arrow">
-        <img src="left-arrow.png" alt="">
-       </div>
-      </a>
-      <img src="" alt="">
-      <div class="main-description">
-        <button type="button" name="button" class="promo-btn"></button>
-        <h2>Сейф Aiko TT-28</h2>
-        <p>Сейф Aiko TT-28 предназначен для хранения короткоствольного и травматического оружия,
-          пистолетов, холодного оружия (охотничьи ножи) в домашних условиях.</p>
-        <ul>
-          <li>Масса <div class="dotted-line"></div> 8.5 кг</li>
-          <li>Габариты <div class="dotted-line"></div> 280x340x295 мм</li>
-          <li>Производство <div class="dotted-line"></div> Россия</li>
-          <li>Объём <div class="dotted-line"></div> 22/11 л</li>
-        </ul>
-        <h3>29 900 руб.</h3>
-        <span>34 590 руб.</span>
-        <button type="button" name="button" class="more-detailed-btn"></button>
+
+<head>
+  <meta charset="utf-8">
+  <title>Лучшие товары - Prime</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <!-- JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="less/style.less">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <header>
+    <h1>Лучшие товары</h1>
+    <button type="button" name="button" class="all-products-btn">Все товары</button>
+    <p>Идейные соображения высшего порядка, а также сложившаяся структура организации представляет собой
+      интересный эксперимент проверки направлений прогрессивного <br> развития.</p>
+  </header>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="d-block w-100" src="..." alt="Первый слайд">
+          <div class="wrapper">
+            <img src="img/img1.png" alt="">
+            <div class="main-description">
+              <button type="button" name="button" class="promo-btn">Акция</button>
+              <h2>Сейф Aiko TT-28</h2>
+              <p>Сейф Aiko TT-28 предназначен для хранения короткоствольного и травматического <br> оружия,
+                пистолетов, холодного оружия (охотничьи ножи) в домашних условиях.</p>
+              <div class="specifications">
+                <div class="specification">Масса ............................................................. 8.5 кг</div>
+                <div class="specification">Габариты ................................... 280x340x295 мм</div>
+                <div class="specification">Производство ............................................ Россия</div>
+                <div class="specification">Объём ........................................................ 22/11 л</div>
+              </div>
+              <div class="line"></div>
+              <h3>29 900 руб.</h3>
+              <span>34 590 руб.</span>
+              <button type="button" name="button" class="more-detailed-btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
       </div>
-      <a href="#">
-       <div class="right-arrow">
-        <img src="right-arrow.png" alt="">
-       </div>
-      </a>
-    </main>
-  </body>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img/slide-2-3-4.png" alt="Второй слайд">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img/slide-2-3-4.png" alt="Третий слайд">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img/slide-2-3-4.png" alt="Четвертый слайд">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <!-- <main>
+
+  </main> -->
+</body>
+
 </html>
