--- a/index.html
+++ b/index.html
@@ -45,21 +45,23 @@
                 <div class="specification">Объём ........................................................ 22/11 л</div>
               </div>
               <div class="line"></div>
-              <h3>29 900 руб.</h3>
-              <span>34 590 руб.</span>
-              <button type="button" name="button" class="more-detailed-btn">Подробнее</button>
+              <div class="prices-and-btn-wrapper">
+                <p>29 900 руб.</p>
+                <span>34 590 руб.</span>
+                <button type="button" name="button" class="more-detailed-btn">Подробнее</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="img/slide-2-3-4.png" alt="Второй слайд">
+        <img class="d-block w-100" src="" alt="Второй слайд">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="img/slide-2-3-4.png" alt="Третий слайд">
+        <img class="d-block w-100" src="" alt="Третий слайд">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="img/slide-2-3-4.png" alt="Четвертый слайд">
+        <img class="d-block w-100" src="" alt="Четвертый слайд">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
